Reader can search Books : Angular

--- a/digital_books/angular/digitalbooks-ui/src/components/header/header.component.html
+++ b/digital_books/angular/digitalbooks-ui/src/components/header/header.component.html
@@ -1,4 +1,4 @@
 <div>
     <h1>Digital Books</h1>
-    <a routerLink="/reader/search">Search</a> | 
+    <a routerLink="/reader/search">Search To Buy</a> | 
 </div>
