Subscriptions page done : Angular

--- a/digital_books/angular/digitalbooks-ui/src/components/header/header.component.html
+++ b/digital_books/angular/digitalbooks-ui/src/components/header/header.component.html
@@ -1,4 +1,5 @@
 <div>
-    <h1>Digital Books</h1>
-    <a routerLink="/reader/search">Search To Buy</a> | 
+    <h1>Digital Books - Reader</h1>
+    <a routerLink="/reader/search">Search & Subscribe</a> | 
+    <a routerLink="/reader/subscriptions">Subscriptions</a>
 </div>
