--- a/digital_books/angular/digitalbooks-ui/src/reader/subscriptions/subscriptions.component.html
+++ b/digital_books/angular/digitalbooks-ui/src/reader/subscriptions/subscriptions.component.html
@@ -1,1 +1,53 @@
-<p>subscriptions works!</p>
+<h3>Subscriptions</h3>
+
+<form [formGroup]="emailForm">
+    
+    Enter your Email ID: <input 
+                #emailId
+                formControlName="emailId"
+                type="text"
+                placeholder="Enter Email" />
+               
+    
+    <input 
+        type="button"
+        value="Get Subscriptions"
+        (click)="getSubscriptions(emailId.value)"
+        [disabled]="emailForm.invalid" />
+    
+</form>
+
+<br>
+
+<table border="1">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Logo</th>
+            <th>Title</th>
+            <th>Author</th>
+            <th>Category</th>
+            <th>Publisher</th>
+            <th>Published Date</th>
+            <th>Price</th>
+            <th>Action</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let bookDto of bookPayload.bookDtoList;let i=index">
+            <td>{{bookDto.bookId}}</td>
+            <td>{{bookDto.logo}}</td>
+            <td>{{bookDto.title}}</td>
+            <td>{{bookDto.author}}</td>
+            <td>{{bookDto.category}}</td>
+            <td>{{bookDto.publisher}}</td>
+            <td>{{bookDto.publishedDate}}</td>
+            <td>{{bookDto.price}}</td>
+            <td><input 
+                type="button"
+                value="View"
+                (click)="viewBook(bookDto)"
+                /></td>
+        </tr>
+    </tbody>
+</table>
