Subscribe, Read, Refund : Angular

--- a/digital_books/angular/digitalbooks-ui/src/components/header/header.component.html
+++ b/digital_books/angular/digitalbooks-ui/src/components/header/header.component.html
@@ -1,5 +1,7 @@
 <div>
     <h1>Digital Books - Reader</h1>
     <a routerLink="/reader/search">Search & Subscribe</a> | 
-    <a routerLink="/reader/subscriptions">Subscriptions</a>
+    <a routerLink="/reader/subscriptions">Your Subscriptions</a> |
+    <a routerLink="/reader/find">Invoice Search</a> |
+    <a routerLink="/reader/notifications">Get Notifications</a> |
 </div>
