--- a/digital_books/angular/digitalbooks-ui/src/components/header/header.component.html
+++ b/digital_books/angular/digitalbooks-ui/src/components/header/header.component.html
@@ -1,7 +1,16 @@
 <div>
     <h1>Digital Books - Reader</h1>
-    <a routerLink="/reader/search">Search & Subscribe</a> | 
-    <a routerLink="/reader/subscriptions">Your Subscriptions</a> |
-    <a routerLink="/reader/find">Invoice Search</a> |
-    <a routerLink="/reader/notifications">Get Notifications</a> |
+
+    <a routerLink="/reader/search">| Home |</a>
+
+    <a *ngIf="!authorLoggedIn" routerLink="/reader/search">| Search & Subscribe |</a>
+    <a *ngIf="!authorLoggedIn" routerLink="/reader/subscriptions">| Your Subscriptions |</a>
+    <a *ngIf="!authorLoggedIn" routerLink="/reader/find">| Invoice Search |</a> 
+    <a *ngIf="!authorLoggedIn" routerLink="/reader/notifications">| Get Notifications |</a>
+    <a *ngIf="!authorLoggedIn" routerLink="/reader/notifications">| Author Login |</a>
+
+    <a *ngIf="authorLoggedIn" routerLink="/reader/search">| My Books |</a>
+    <a *ngIf="authorLoggedIn" routerLink="/reader/subscriptions">| Create New Book |</a>
+    <a *ngIf="authorLoggedIn" routerLink="/reader/find">| Log Out |</a>
+
 </div>
