Added components and header routing for Author : Angular

--- a/digital_books/angular/digitalbooks-ui/src/components/header/header.component.html
+++ b/digital_books/angular/digitalbooks-ui/src/components/header/header.component.html
@@ -10,8 +10,8 @@
     <a *ngIf="!authorLoggedIn" routerLink="/reader/notifications">| Get Notifications |</a>
     <a *ngIf="!authorLoggedIn" routerLink="/reader/notifications">| Author Login |</a>
 
-    <a *ngIf="authorLoggedIn" routerLink="/reader/search">| My Books |</a>
-    <a *ngIf="authorLoggedIn" routerLink="/reader/subscriptions">| Create New Book |</a>
-    <a *ngIf="authorLoggedIn" routerLink="/reader/find">| Log Out |</a>
+    <a *ngIf="authorLoggedIn" routerLink="/author/books">| My Books |</a>
+    <a *ngIf="authorLoggedIn" routerLink="/author/create">| Create New Book |</a>
+    <a *ngIf="authorLoggedIn" routerLink="/author/logout">| Log Out |</a>
 
 </div>
