Author Signup, Login and Logout done : Angular

--- a/digital_books/angular/digitalbooks-ui/src/author/logout/logout.component.html
+++ b/digital_books/angular/digitalbooks-ui/src/author/logout/logout.component.html
@@ -1,1 +1,14 @@
-<p>logout works!</p>
+<h3>Log Out</h3>
+
+<h4>Do you want to end this session ?</h4>
+<input 
+type="button"
+value="Yes"
+(click)="logout()"
+/>
+&nbsp; &nbsp; &nbsp; 
+<input 
+type="button"
+value="No"
+(click)="goToHomePage()"
+/>
