--- a/digital_books/angular/digitalbooks-ui/src/reader/invoice/invoice.component.html
+++ b/digital_books/angular/digitalbooks-ui/src/reader/invoice/invoice.component.html
@@ -1,1 +1,6 @@
-<p>invoice works!</p>
+<h4>{{paymentInvoiceHtml.heading}}</h4>
+<h5>{{paymentInvoiceHtml.title}}</h5>
+<h5>{{paymentInvoiceHtml.bookId}}</h5>
+<h5>{{paymentInvoiceHtml.paymentId}}</h5>
+<h5>{{paymentInvoiceHtml.readerName}}</h5>
+<h5>{{paymentInvoiceHtml.readerEmail}}</h5>
