--- a/digital_books/angular/digitalbooks-ui/src/author/login/login.component.html
+++ b/digital_books/angular/digitalbooks-ui/src/author/login/login.component.html
@@ -19,7 +19,7 @@
     
     <input 
         type="button"
-        value="Sign Up"
+        value="Log In"
         (click)="login(username.value,password.value)"
         [disabled]="credentialsForm.invalid" />
     
