Changed Button Value of Signup

--- a/digital_books/angular/digitalbooks-ui/src/reader/search/search.component.html
+++ b/digital_books/angular/digitalbooks-ui/src/reader/search/search.component.html
@@ -52,7 +52,7 @@
             <th>Publisher</th>
             <th>Published Date</th>
             <th>Price</th>
-            <th>Action</th>
+            <th>Subscribe</th>
         </tr>
     </thead>
     <tbody>
