--- a/digital_books/angular/digitalbooks-ui/src/reader/invoice/invoice.component.html
+++ b/digital_books/angular/digitalbooks-ui/src/reader/invoice/invoice.component.html
@@ -2,5 +2,6 @@
 <h5>{{paymentInvoiceHtml.title}}</h5>
 <h5>{{paymentInvoiceHtml.bookId}}</h5>
 <h5>{{paymentInvoiceHtml.paymentId}}</h5>
+<h5>{{paymentInvoiceHtml.paymentDate}}</h5>
 <h5>{{paymentInvoiceHtml.readerName}}</h5>
 <h5>{{paymentInvoiceHtml.readerEmail}}</h5>
